@@ -7,7 +7,7 @@ copyright_year   = 2017
 version          = 1.19_02
 
 [@Author::Plicease]
-:version           = 2.12
+:version           = 2.16
 travis_status      = 1
 release_tests      = 1
 
