@@ -1,6 +1,4 @@
-use strict;
-use warnings;
-use Test2::Bundle::Extended;
+use Test2::V0;
 use Test::Script;
 use File::Spec;
 use File::Temp qw( tempdir );
